# bilibili-subtitle

./: .gitignore  README.md  SKILL.md  install.sh  pyproject.toml
bilibili_subtitle/: __main__.py  bbdown_client.py
bilibili_subtitle/agents/: transcribe_agent.py
